<resources>
    <string name="app_name">GHBlog</string>
    <string name="authorizing">Authorizing…</string>
    <string name="authorized">Authorized!</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="blog_url">Blog URL</string>
    <string name="new_article">New</string>
    <string name="save_article">Save Article</string>
    <string name="article_path">File Path</string>
    <string name="article_title">Title</string>
    <string name="article_body">Body</string>
    <string name="preview_article">Preview</string>
    <string name="edit_tag">Edit tag</string>
    <string name="new_tag">New tag</string>
    <string name="save_tag">Save Tag</string>
    <!-- Tools -->
    <string name="tools_repository_name">Repository name</string>
    <string name="tools_tag_name">Tag name</string>
    <string name="tools_article_title">Article title</string>
    <string name="tools_article_publish_date">Article PublishDate</string>
</resources>
