<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="viewModel"
            type="com.wada811.ghblog.viewmodel.ArticleEditViewModel"
            />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <android.support.v7.widget.CardView style="@style/AppTheme.CardViewToolbar_CardView">
            <android.support.v7.widget.Toolbar style="@style/AppTheme.CardViewToolbar_Toolbar">
                <LinearLayout style="@style/AppTheme.CardViewToolbar_LinearLayout">
                    <TextView style="@style/AppTheme.CardViewToolbar_Title" />
                    <ImageButton
                        style="@style/AppTheme.CardViewToolbar_MenuButton"
                        android:contentDescription="@string/save_article"
                        android:onClick="@{viewModel.save.command}"
                        android:src="@drawable/ic_check_black_24dp"
                        />
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.v7.widget.CardView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/article_path"
            android:inputType="text"
            android:text="@={viewModel.path}"
            android:textIsSelectable="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/article_title"
            android:inputType="text"
            android:text="@={viewModel.title}"
            android:textIsSelectable="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top|start"
            android:hint="@string/article_body"
            android:inputType="textMultiLine"
            android:text="@={viewModel.body}"
            android:textIsSelectable="true"
            />
        <android.support.v7.widget.CardView style="@style/AppTheme.CardViewToolbar_CardView">
            <android.support.v7.widget.Toolbar style="@style/AppTheme.CardViewToolbar_Toolbar">
                <LinearLayout style="@style/AppTheme.CardViewToolbar_LinearLayout">
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/AppTheme.CardViewToolbar_TextButton"
                        android:drawableStart="@drawable/ic_tag_black_24dp"
                        android:text="@string/tag"
                        android:onClick="@{viewModel.editTag.command}"
                        />
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>