<?xml version="1.0" encoding="utf-8"?>
<layout
    android:id="@+id/activity_article_tag_edit"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wada811.ghblog.view.activity.ArticleTagEditActivity"
    >
    <data>
        <variable
            name="viewModel"
            type="com.wada811.ghblog.viewmodel.ArticleTagEditViewModel"
            />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <android.support.v7.widget.CardView style="@style/AppTheme.CardViewToolbar_CardView">
            <android.support.v7.widget.Toolbar style="@style/AppTheme.CardViewToolbar_Toolbar">
                <LinearLayout style="@style/AppTheme.CardViewToolbar_LinearLayout">
                    <ImageButton
                        style="@style/AppTheme.CardViewToolbar_MenuButton"
                        android:contentDescription="@string/back"
                        android:onClick="@{viewModel.back.command}"
                        android:src="@drawable/ic_arrow_back_black_24dp"
                        />
                    <TextView style="@style/AppTheme.CardViewToolbar_Title" />
                    <ImageButton
                        style="@style/AppTheme.CardViewToolbar_MenuButton"
                        android:contentDescription="@string/save_tag"
                        android:onClick="@{viewModel.save.command}"
                        android:src="@drawable/ic_check_black_24dp"
                        />
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.v7.widget.CardView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/new_tag"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:text="@={viewModel.tag}"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textIsSelectable="true"
            app:onEditDone="@{viewModel.done.command}"
            />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:dividerDrawable="@{@drawable/divider}"
            app:items="@{viewModel.tags}"
            app:onItemClick="@{viewModel.check.command}"
            />
    </LinearLayout>
</layout>
